--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,7 +174,7 @@
     padding: 0 0.5rem;
     color: #888;
     cursor: pointer;
-    z-index: 200;
+    z-index: 50;
     box-sizing: content-box;
     transition: all 300ms ease-in-out;
 }
